--- a/back/product-service/pom.xml
+++ b/back/product-service/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>android-json</artifactId>
             <version>0.0.20131108.vaadin1</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-netflix-ribbon</artifactId>
+			<version>2.2.10.RELEASE</version>
+		</dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
