add client service

--- a/back/billing-service/src/main/resources/application.yml
+++ b/back/billing-service/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     name: billing-service
 
   config:
-    import: optional:http://localhost:7000
+    import: optional:configserver:http://localhost:7000
